# grype-db

./: .binny.yaml  .bouncer.yaml  .gitattributes  .gitignore  .gitmodules  .golangci.yaml  .goreleaser.yaml  .grype-db-manager.yaml  .grype-db.yaml  .vunnel.yaml  .yardstick.yaml  CONTRIBUTING.md  DEVELOPING.md  Makefile  README.md  RELEASE.md  Taskfile.yaml  bump-schema.py  go.mod  go.sum  grype-schema-version-mapping.json  install.sh  llms.txt  provider.go  pyproject.toml  set_logger.go  store.go  vulnerability.go
publish/: .gitignore  .grype-db.yaml  pyproject.toml  upload-dbs.sh
publish/src/publisher/: console.py
publish/src/publisher/utils/: builder.py  constants.py  grype.py  listing.py  metadata.py  repo_root.py  s3utils.py  test.py
publish/test-fixtures/: centos-8.2.2004.json
publish/tests/: test_update_listing.py
publish/tests/utils/: test_listing.py
test/acceptance/: .gitignore  grype-ingest.py  pyproject.toml
test/acceptance/test-fixtures/: .gitignore
test/acceptance/test-fixtures/result/sets/: acceptance-test.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.12.1/2023-01-04T21:22:07+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.12.1/2023-02-16T20:15:38+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.12.1/2023-03-09T14:57:52+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.12.1/2023-03-09T17:34:42+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.12.1/2023-06-29T21:33:22.221818+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.12.1/2023-07-31T13:29:32.899016+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.40.1/2023-01-04T21:23:38+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.40.1/2023-02-16T20:18:42+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.40.1/2023-03-09T15:00:42+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.40.1/2023-03-09T17:36:39+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.40.1/2023-06-29T21:35:02.303565+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.40.1/2023-07-31T13:31:47.043537+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.50.2/2023-01-04T21:25:36+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.50.2/2023-02-16T20:21:51+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.50.2/2023-03-09T15:03:59+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.50.2/2023-03-09T17:38:57+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.50.2/2023-06-29T21:37:02.321580+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.50.2/2023-07-31T13:34:30.368442+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.52.0-9-gb3e65b3/2023-01-04T21:27:34+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.55.0-1-g3a8b2e3/2023-02-16T20:25:03+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.55.0-1-g3a8b2e3/2023-03-09T15:07:49+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.59.1-1-g3a4d01b/2023-03-09T17:41:32+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.7.0/2023-01-04T21:19:06+00:00/: data.json  metadata.json
test/acceptance/test-fixtures/result/store/anchore+test_images@sha256:01c78cee3fe398bf1f77566177770b07f1d2af01753c2434cb0735bd43a078b6/grype@v0.7.0/2023-02-16T20:09:51+00:00/: data.json  metadata.json
(+1608 files in other folders)
