[tool.poetry.scripts]
publisher = "publisher.console:cli"

[tool.poetry.group.dev.dependencies]
pytest-sugar = "^0.9.6"
pytest-clarity = "^1.0.1"

[tool.poetry]
name = "publisher"
version = "0.1.0"
description = "Collection of scripts used to generate and publish supported grype DBs"
authors = ["Alex Goodman <alex.goodman@anchore.com>"]
license = "Apache 2.0"
exclude = [
    "tests/**/*"
]

[tool.poetry.dependencies]
python = "^3.10"
#yardstick = {path = "../../../yardstick", develop = true}
click = "^8"
boto3 = "^1.18.0"
requests = "^2.26.0"
semver = "^2.13.0"
dataclasses-json = "^0.5.4"
iso8601 = "^0.1.14"
zstandard = "^0.18.0"
yardstick = {git = "https://github.com/anchore/yardstick.git", rev = "028b7723cd1133dd649ac5f5db90ea743767f2b8"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
tox = "^3.23.0"
