[tool.poetry.scripts]
publisher = "publisher.console:cli"

[tool.poetry.group.dev.dependencies]
pytest-sugar = "^0.9.6"
pytest-clarity = "^1.0.1"

[tool.poetry]
name = "publisher"
version = "0.1.0"
description = "Collection of scripts used to generate and publish supported grype DBs"
authors = ["Alex Goodman <alex.goodman@anchore.com>"]
license = "Apache 2.0"
exclude = [
    "tests/**/*"
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8"
boto3 = "^1.18.0"
requests = "^2.26.0"
semver = "^2.13.0"
dataclasses-json = "^0.5.4"
iso8601 = "^0.1.14"
zstandard = "^0.18.0"
yardstick = {git = "https://github.com/anchore/yardstick", rev = "dcd3ec4683dd6b4bd3e1a972fa5b09008f683be1"}

[tool.poetry.dev-dependencies]
# We have to restrict cython currently due to https://github.com/yaml/pyyaml/issues/601.  PyYAML >= 6.0.1 does address this; however, enterprise currently can't upgrade to 6.x
Cython = "< 3.0"
pytest = "^6.2.2"
tox = "^3.23.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
