[tool.poetry]
name = "publish"
version = "0.1.0"
description = "Acceptance test generated DBs against grype"
authors = ["Alex Goodman <alex.goodman@anchore.com>"]
license = "Apache 2.0"
exclude = [
    "test/**/*"
]

[tool.poetry.dependencies]
python = "^3.10"
yardstick = {git = "https://github.com/anchore/yardstick", rev = "dcd3ec4683dd6b4bd3e1a972fa5b09008f683be1"}
tabulate = "^0.9"
publisher = {path = "../../publish"}


[tool.poetry.dev-dependencies]
# We have to restrict cython currently due to https://github.com/yaml/pyyaml/issues/601.  PyYAML >= 6.0.1 does address this; however, enterprise currently can't upgrade to 6.x
Cython = "< 3.0"
pytest = "^6.2.2"
tox = "^3.23.0"

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"
